[package]
name = "helloworld"
version = "0.1.0"
authors = ["Aral Roca Gomez <contact@aralroca.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"] ## add this

[dependencies]
wasm-bindgen = "0.2.67" ## add this

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]